--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,7 @@ classifiers = [
     "Topic :: Utilities",
 ]
 dependencies = [
-    "pyperclip>=1.8.2",
+    "pyperclip>=1.8.2",  # Optional: improves clipboard support, app works without it
 ]
 
 [project.scripts]
